<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Factura">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.1"
        android:minHeight="250dp"
        android:scaleType="center"
        app:srcCompat="@drawable/mercedestaxi" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewFactura"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/direccionCustomer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_fields"
            android:gravity="center"
            android:hint="@string/hint_dir"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/dirProvincia"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_fields"
            android:gravity="center"
            android:hint="@string/hint_county"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_below="@+id/dirMunicipio" />

        <EditText
            android:id="@+id/mostrarFechaFact"
            android:layout_width="170dip"
            android:layout_height="50dip"
            android:layout_below="@+id/dirPais"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_fields"
            android:editable="false"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/hint_fecha"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textSize="20dp"
            android:layout_alignLeft="@+id/dirPais"
            android:layout_alignStart="@+id/dirPais"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Seleccionar fecha"
            android:id="@+id/selecFecha1"
            android:textColor="#090909"
            android:onClick="SelecFecha"
            android:textSize="10dp"
            android:layout_alignTop="@+id/mostrarFechaFact"
            android:layout_alignRight="@+id/dirPais"
            android:layout_alignEnd="@+id/dirPais" />

        <EditText
            android:id="@+id/dirPais"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_fields"
            android:gravity="center"
            android:hint="@string/hint_country"
            android:singleLine="true"
            android:inputType="textCapCharacters"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_below="@+id/dirProvincia"/>

        <EditText
            android:id="@+id/dirNumber"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/direccionCustomer"
            android:background="@drawable/rounded_fields"
            android:gravity="center"
            android:hint="@string/hint_number"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/dirCodigoPostal"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_above="@+id/dirMunicipio"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_fields"
            android:gravity="center"
            android:hint="@string/hint_postcode"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/dirMunicipio"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_fields"
            android:gravity="center"
            android:hint="@string/hint_town"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_below="@+id/dirNumber" />

        <Button
            android:id="@+id/goToFactura1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="goToFactura1"
            android:text="@string/button_next"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/mostrarFechaFact"
            android:layout_marginTop="20dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
