<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.usuario.testingbd.UploadLogo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.1"
        android:minHeight="250dp"
        android:scaleType="center"
        app:srcCompat="@drawable/mercedestaxi" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewEditProfile"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/uploadLogo"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="uploadLogo"
                android:text="@string/button_upload"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/viewLogo"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/uploadLogo"/>

            <Button
                android:id="@+id/confirmarLogo"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@id/viewLogo"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="20dp"
                android:onClick="confirmarLogo"
                android:text="@string/button_confirm"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <Button
                android:id="@+id/cancelarLogo"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@id/viewLogo"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:onClick="cancelarLogo"
                android:text="@string/button_cancel"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/errorUploadLogo"
                android:layout_below="@id/confirmarLogo"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:text="@string/error_subirImagen"
                android:textSize="20dp"
                android:textColor="@color/hojaRuta_warning"
                android:layout_marginTop="20dp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
